third_party/move/move-compiler/tests/move_check/parser/duplicate_entry_modifier.move
module 0x2::M {
    entry entry fun foo() {}
}
